--- a/complib.html
+++ b/complib.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sneh's Component Lib</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <h1>Sneh's Component Library</h1>
