--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sneh Gupta's Portfolio</title>
+    <title>Sneh G | Home</title>
 </head>
 <body>
    <h1>Hello there! Welcome to Sneh's Portfolio</h1>
