--- a/lib/complib.html
+++ b/lib/complib.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sneh's Component Lib</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="/styles.css" rel="stylesheet">
 </head>
 <body>
     <h1>Sneh's Component Library</h1>
@@ -104,7 +104,7 @@
     <hr>
     <h1><em>Footer</em></h1>
     <footer class="footer">
-        <div>'Lil heading here</div>
+        <div class="footer-header">'Lil heading here</div>
         <ul class='socials non-bullet'>
             <li class="list-inline"><a class = 'link' href='/'>one</a></a></li>
             <li class="list-inline"><a class = 'link' href="/">two</a></li>
