--- a/index.html
+++ b/index.html
@@ -5,11 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sneh G | Home</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
+
 <body>
-   <h1>Hello there! Welcome to Sneh's Portfolio</h1>
-   <p>Contents will be added soon. Stay Tuned!</p>
-   <hr>
+    <nav class="navigation container">
+        <div class="nav-name">Sneh Gupta</div>
+        <ul class = 'non-bullet nav-pills'>
+            <li class="list-inline">
+                <a class="link link-active" href='/'>Home</a>
+            </li>
+            <li class="list-inline">
+                <a class="link" href="/projects.html">Projects</a>
+            </li>
+            <li class="list-inline">
+                <a class="link" href="/blogs.html">Blog</a>
+            </li>
+        </ul>
+    </nav>
+
+    <header class='hero'>
+        <img class="hero-img" src="images/Main_img.svg" length = '512' width = '512'>
+        <h1 class = 'hero-heading'>Sneh Gupta the <span class='header-dev'> Web Developer</span></h1>
+    </header>
+
+    <section class="ow section">
+        <div class="center-container">
+            <h3>Technologies</h3>
+            <p>I have favourable experience in Python, HTML, CSS, JavaScript, NodeJS, Git and Web Hosting</p>
+        </div>
+    </section>
+    <section class="section">
+        <div class="center-container">
+            <h3>My Projects</h3>
+            <p>I have developed different types of CLI based applications and few websites.<br>You can find them here:</p>
+            <a class="link primary-link" href="projects.html">See Projects</a>
+        </div>    
+    </section>
+    <section class="ow section">
+        <div class="center-container">
+            <h3>My Blogs</h3>
+            <p>Apart from coding, I have started to write blogs.<br>You can find my blogs here:</p>
+            <a class="link primary-link" href="blogs.html">Read Blogs</a>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class = footer-header>Connect with me through the following socials-</div>
+        <ul class='socials non-bullet'>
+            <li class="list-inline"><a class = 'link' href='https://www.github.com/SirSnehGupta'>GitHub <img src="https://image.flaticon.com/icons/png/128/2111/2111425.png" height="14" width="14"></a></a></li>
+            <li class="list-inline"><a class = 'link' href="https://www.instagram.com/sir_sneh_gupta">Instagram</a></li>
+            <li class="list-inline"><a class = 'link' href="https://twitter.com/SnehG_004">Twitter</a></li>
+        </ul>
+    </footer>
    
 </body>
 </html>
