added projects and minor fix

--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,36 @@
             </li>
         </ul>
     </nav>
-    <p>Projects will be updated soon. Stay Tuned!</p>
+    <ol type="1">
+        <li class="container center-container">
+            <section class="section">
+                <div class="center-container">
+                    <h3>MonTra</h3>
+                    <p>MonTra is a simple yet efficient CLI-Based Finance Tracker based on Python.<br>Easily track your incomes and expenses with just a few commands.</br></p>
+                    <a class="link primary-link" href="https://github.com/SirSnehGupta/MonTra" target="_blank">View on GitHub</a>
+                </div>
+            </section>
+        </li>
+        <li class="container center-container">
+            <section class="section">
+                <div class="center-container">
+                    <h3>Grajin</h3>
+                    <p>Grajin is a CLI based Graph generator based on Python.<br>Enter your data and get a customisable graph instantly.</br></p>
+                    <a class="link primary-link" href="https://github.com/SirSnehGupta/Grajin" target="_blank">View on GitHub</a>
+                </div>
+            </section>
+        </li>
+        <li class="container center-container">
+            <section class="section">
+                <div class="center-container">
+                    <h3>How well do you know me?</h3>
+                    <p>A quiz made using NodeJS to test your knowledge about me.</p>
+                    <a class="link primary-link" href="https://replit.com/@74rksy4/How-well-do-you-know-me?embed=1&output=1#index.js" target="_blank">Try it out</a>
+                    <a class="link secondary-link" href="https://replit.com/@74rksy4/How-well-do-you-know-me" target="_blank">View on Repl.it</a>
+                </div>
+            </section>
+        </li>
+    </ol>
+    
 </body>
 </html>
