--- a/blogs.html
+++ b/blogs.html
@@ -18,7 +18,7 @@
                 <a class="link" href="/projects.html">Projects</a>
             </li>
             <li class="list-inline">
-                <a class="link link-active" href="/blogs.html">Blog</a>
+                <a class="link link-active" href="/blogs.html">Blogs</a>
             </li>
         </ul>
     </nav>
