--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
                 <a class="link link-active" href="/projects.html">Projects</a>
             </li>
             <li class="list-inline">
-                <a class="link" href="/blogs.html">Blog</a>
+                <a class="link" href="/blogs.html">Blogs</a>
             </li>
         </ul>
     </nav>
@@ -51,7 +51,25 @@
                 </div>
             </section>
         </li>
+        <li class="container center-container">
+            <section class="section">
+                <div class="center-container">
+                    <h3>This Portfolio</h3>
+                    <p>This portfolio is made using HTML and CSS.</p>
+                    <a class="link primary-link" href="https://www.github.com./SirSnehGupta/The-Portfolio" target="_blank">View on GitHub</a>
+                </div>
+            </section>
+        </li>
     </ol>
+
+    <footer class="footer">
+        <div class = footer-header>My socials-</div>
+        <ul class='socials non-bullet'>
+            <li class="list-inline"><a class = 'link' href='https://www.github.com/SirSnehGupta' target="_blank">GitHub <img src="https://image.flaticon.com/icons/png/128/2111/2111425.png" height="14" width="14"></a></a></li>
+            <li class="list-inline"><a class = 'link' href="https://www.instagram.com/sir_sneh_gupta" target="_blank">Instagram</a></li>
+            <li class="list-inline"><a class = 'link' href="https://twitter.com/SnehG_004" target="_blank">Twitter</a></li>
+        </ul>
+    </footer>
     
 </body>
 </html>
