--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 
     <header class='hero'>
-        <img class="hero-img" src="images/Main_img.svg" length = '512' width = '512'>
+        <img class="hero-img responsive" src="images/Main_img.svg" length = '512' width = '512'>
         <h1 class = 'hero-heading'>Sneh Gupta the <span class='header-dev'>Web Developer</span>.</h1>
     </header>
 
