--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="navigation container">
-        <div class="nav-name">Sneh Gupta</div>
+        <div class="nav-name">The Portfolio</div>
         <ul class = 'non-bullet nav-pills'>
             <li class="list-inline">
                 <a class="link link-active" href='/'>Home</a>
