added dark mode

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sneh G | Home</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="stylesd.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
             <p>I have favourable experience in Python, HTML, CSS, JavaScript, NodeJS, Git and Web Hosting</p>
         </div>
     </section>
-    <section class="ow section">
+    <section class="off-bg section">
         <div class="center-container">
             <h3>My Projects</h3>
             <p>I have developed different types of CLI based applications and a few websites.<br>You can find them here:</p>
