--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <footer class="footer">
         <div class = footer-header>My socials-</div>
         <ul class='socials non-bullet'>
-            <li class="list-inline"><a class = 'link' href='https://www.github.com/SirSnehGupta' target="_blank">GitHub <img src="https://image.flaticon.com/icons/png/128/2111/2111425.png" height="14" width="14"></a></a></li>
+            <li class="list-inline"><a class = 'link' href='https://www.github.com/SirSnehGupta' target="_blank">GitHub</a></li>
             <li class="list-inline"><a class = 'link' href="https://www.instagram.com/sir_sneh_gupta" target="_blank">Instagram</a></li>
             <li class="list-inline"><a class = 'link' href="https://twitter.com/SnehG_004" target="_blank">Twitter</a></li>
         </ul>
