--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-name">Sneh Gupta</div>
+        <div class="nav-name">The Portfolio</div>
         <ul class = 'non-bullet nav-pills'>
             <li class="list-inline">
                 <a class="link" href='/'>Home</a>
