--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 
 <body>
     <nav class="navigation container">
-        <div class="nav-name">The Portfolio</div>
+        <div class="nav-name">Sneh's Portfolio</div>
+        <div class="theme-selector">
+            <button id='dark'>Dark Theme</button>
+            <br>
+            <button id="light">Light Theme</button>
+            
+            <!-- <script>
+                var light = document.querySelector("#light")
+                light.addEventListener('click', document.querySelector("head > link:nth-child(5)").href = 'styles.css')
+            </script> -->
+        </div>
+        <script src="script.js" type="text/javascript"></script>
         <ul class = 'non-bullet nav-pills'>
             <li class="list-inline">
                 <a class="link link-active" href='/'>Home</a>
@@ -25,7 +36,7 @@
     </nav>
 
     <header class='hero'>
-        <img class="hero-img responsive" src="images/Main_img.svg" length = '512' width = '512'>
+        <img class="hero-img responsive" src="images/Sneh.svg" length = '512' width = '512'>
         <h1 class = 'hero-heading'>Sneh Gupta the <span class='header-dev'>Web Developer</span>.</h1>
     </header>
 
@@ -58,6 +69,5 @@
             <li class="list-inline"><a class = 'link' href="https://twitter.com/SnehG_004" target="_blank">Twitter</a></li>
         </ul>
     </footer>
-   
 </body>
 </html>
