--- a/blogs.html
+++ b/blogs.html
@@ -10,6 +10,12 @@
 <body>
     <nav class="navigation container">
         <div class="nav-name">The Portfolio</div>
+        <div class="theme-selector">
+            <button id='dark'>Dark Theme</button>
+            <br>
+            <button id="light">Light Theme</button>
+        </div>
+        <script src="script.js" type="text/javascript"></script>
         <ul class = 'non-bullet nav-pills'>
             <li class="list-inline">
                 <a class="link" href='/'>Home</a>
