--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,12 @@
 <body>
     <nav class="navigation container">
         <div class="nav-name">The Portfolio</div>
+        <div class="theme-selector">
+            <button id='dark'>Dark Theme</button>
+            <br>
+            <button id="light">Light Theme</button>
+        </div>
+        <script src="script.js" type="text/javascript"></script>
         <ul class = 'non-bullet nav-pills'>
             <li class="list-inline">
                 <a class="link" href='/'>Home</a>
@@ -33,7 +39,7 @@
             </section>
         </li>
         <li class="container center-container">
-            <section class="section">
+            <section class="off-bg section">
                 <div class="center-container">
                     <h3>Grajin</h3>
                     <p>Grajin is a CLI based Graph generator based on Python.<br>Enter your data and get a customisable graph instantly.</br></p>
@@ -52,10 +58,10 @@
             </section>
         </li>
         <li class="container center-container">
-            <section class="section">
+            <section class="off-bg section">
                 <div class="center-container">
                     <h3>This Portfolio</h3>
-                    <p>This portfolio is made using HTML and CSS.</p>
+                    <p>This portfolio is made using HTML, CSS and JavaScript.</p>
                     <a class="link primary-link" href="https://www.github.com./SirSnehGupta/The-Portfolio" target="_blank">View on GitHub</a>
                 </div>
             </section>
