--- a/blogs.html
+++ b/blogs.html
@@ -28,6 +28,20 @@
             </li>
         </ul>
     </nav>
-    <p>Blogs will be added soon! Stay Tuned!</p>
+
+    <section class="section">
+        <div class="center-container">
+            <p>Blogs will be added soon! Stay Tuned!</p>
+        </div>  
+    </section>
+    
+    <footer class="footer">
+        <div class = footer-header>My socials-</div>
+        <ul class='socials non-bullet'>
+            <li class="list-inline"><a class = 'link' href='https://www.github.com/SirSnehGupta' target="_blank">GitHub</a></li>
+            <li class="list-inline"><a class = 'link' href="https://www.instagram.com/sir_sneh_gupta" target="_blank">Instagram</a></li>
+            <li class="list-inline"><a class = 'link' href="https://twitter.com/SnehG_004" target="_blank">Twitter</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
