--- a/blogs.html
+++ b/blogs.html
@@ -30,8 +30,8 @@
     </nav>
 
     <section class="section">
-        <div class="center-container">
-            <p>Blogs will be added soon! Stay Tuned!</p>
+        <div>
+            <center><p>Blogs will be added soon! Stay Tuned!</p></center>
         </div>  
     </section>
 </body>
